// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component should match snapshot - Any valid Badge with [object Object] anchor: Badge snapshot - with [object Object] anchor 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopLeftRectangle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with [object Object] anchor: Badge snapshot - with [object Object] anchor 2`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with [object Object] anchor: Badge snapshot - with [object Object] anchor 3`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginBottomLeftRectangle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with [object Object] anchor: Badge snapshot - with [object Object] anchor 4`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with circle overlap: Badge snapshot - with circle overlap 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightCircle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with default color: Badge snapshot - with default color 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with dot variant: Badge snapshot - with dot variant 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-dot"
  >
    
  </span>
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with error color: Badge snapshot - with error color 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorError MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with primary color: Badge snapshot - with primary color 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with rectangle overlap: Badge snapshot - with rectangle overlap 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with secondary color: Badge snapshot - with secondary color 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorSecondary MuiBadge-invisible"
  />
</span>
`;

exports[`Badge component should match snapshot - Any valid Badge with standard variant: Badge snapshot - with standard variant 1`] = `
<span
  className="MuiBadge-root"
>
  Badge
  <span
    className="MuiBadge-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-invisible"
  />
</span>
`;
